--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(Harambe)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC on)
 set(CMALE_AUTOUIC on)
-set(CMAKE_PREFIX_PATH ~/Applications/Qt5.12.0/5.12.0/clang_64/lib/cmake)
 
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Core REQUIRED)
@@ -13,7 +12,9 @@ find_package(Qt5Multimedia REQUIRED)
 
 
 set(SOURCE_FILES
-        main.cpp)
+        main.cpp
+        GameWindow.cpp
+        GameWindow.h)
 
 add_executable(Harambe ${SOURCE_FILES})
 target_link_libraries(Harambe Qt5::Widgets Qt5::Multimedia)
